<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/development_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="10sp"
            android:src="@drawable/drinking_water">
        </ImageView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s_no"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/development_col1_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_code"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/development_col2_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_code"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_description"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/development_col3_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="s.no"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/focus_area"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/development_col4_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="s.no"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/development_col5_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="s.no"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_weight="4"
                    android:textSize="15sp"/>

            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>